Directions routes and awesome animations during the travel.
In this commit it has been added some awesome features and funtionalities.

-Display directions
-Star real time drive animation ( Simulation )

I am very happy to achived these 2 new features in this personal project.

Special thnaks for Mr.  :coffee:

--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="views/styles/main.css">
   </head>
   <body >
+        <div id="floating-panel">
+            <b>Start: </b>
+                    <select id="start">
+                  <option value="25.703302, -100.315589">My location</option>
+                </select>
+            <b>End: </b>
+                <select id="end">
+                    <option value="25.672118, -100.346606">HEB Coorporativo</option>
+                </select>
+            <button id="gooRoute">Get Route</button>
+        </div>
+
     <div id="map"></div>
 
 
@@ -25,6 +37,6 @@
 
 
 
-    <script src="controller/MainMap.js"></script>
+    <script src="controller/MainMap2.js"></script>
   </body>
 </html>
