Tests API Integration and better code performance
In this commit it has been added a very simple API in order to test the functionalities of Real Time delivery location.

More commits will be added :smile:

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="views/styles/main.css">
   </head>
   <body >
+      <div id="floating-panel">
+          <b>Start: </b>
+                  <select id="start">
+                <option value="25.703302, -100.315589">My location</option>
+              </select>
+          <b>End: </b>
+              <select id="end">
+                  <option value="25.672118, -100.346606">HEB Coorporativo</option>
+              </select>
+          <button id="gooRoute">Get Route</button>
+      </div>
     <div id="map"></div>
 
 
